--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	},
 	"runArgs": [
 		"-it", "--rm",
-		"--name", "python-container"
+		"--name", "python-container",
+		"-p", "5000:5000"
 	],
 
 	"workspaceFolder": "/app",
